tests/errors/multi_error_2.c
while (true) // 'true' not defined in tokens
{
    int a;
    a = b + 5; // Undeclared b
    if (a == 10)
    {
        char c = 10;
        c = "string"; // String not supported
    }
// Missing closing brace for while
